RESOLVED FIXED261766
REGRESSION(267565@main): caused text to go missing on GitHub PR pages
https://bugs.webkit.org/show_bug.cgi?id=261766
Summary REGRESSION(267565@main): caused text to go missing on GitHub PR pages
WebKit Commit Bot
Reported 2023-09-19 12:54:15 PDT
https://commits.webkit.org/267565@main introduced a regression: caused text to go missing on GitHub PR pages This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 267565@main (7.74 KB, patch)
2023-09-19 12:54 PDT, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2023-09-19 12:54:23 PDT
Created attachment 467764 [details] REVERT of 267565@main Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2023-09-19 12:57:58 PDT
Committed 268143@main (0b931b344706): <https://commits.webkit.org/268143@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467764 [details].
Radar WebKit Bug Importer
Comment 3 2023-09-19 12:58:21 PDT
Ahmad Saleem
Comment 4 2023-10-02 14:47:51 PDT
*** Bug 262490 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 5 2023-10-05 13:49:26 PDT
*** Bug 262727 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.