Cherry-pick 0b931b344706. rdar://115527098

Unreviewed, reverting 267565@main.
    https://bugs.webkit.org/show_bug.cgi?id=261766

    caused text to go missing on GitHub PR pages

    Reverted changeset:

    "Add mutation events tests for ContainerNode::replaceChildren and refactor the code"
    https://bugs.webkit.org/show_bug.cgi?id=261016
    https://commits.webkit.org/267565@main

    Canonical link: https://commits.webkit.org/268143@main

Canonical link: https://commits.webkit.org/267815.117@safari-7617-branch