Source/WebCore/dom/Node.h
@@ -710,7 +710,6 @@ protected:
     void updateAncestorsForStyleRecalc();
     void markAncestorsForInvalidatedStyle();
 
-    Vector<Ref<Node>, 1> convertNodesOrStringsIntoNodeVector(FixedVector<NodeOrString>&&);
     ExceptionOr<RefPtr<Node>> convertNodesOrStringsIntoNode(FixedVector<NodeOrString>&&);
 
 private:
